[package]
name = "ameba_blog_downloader"
version = "1.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "*", features = ["full"] }
reqwest = { version = "*", features = ["default"] }
regex = { version = "*", features = ["default"] }
futures = { version = "*", features = ["default"] }
serde_json = { version = "*", features = ["default", "preserve_order"] }
serde = { version = "*", features = ["default", "derive"] }
ort = { version = "1.15.2", features = ["default"] }
tract-onnx = { version = "*" }
image = { version = "*", features = ["jpeg", "png"] }
#tracing-subscriber = { version = "*", features = ["fmt", "env-filter"] }
#rand = { version = "*", features = ["default"] }
ndarray = { version = "*", features = ["default"] }
imageproc = { version = "*", features = ["default"] }
#include-bytes-zstd = { version = "0.1.0" }
wasm-bindgen = { version = "*" }
wasm-pack = { version = "*" }
console-subscriber = { version = "*" }
#openssl-sys = { version = "0.9.93", features = ["vendored"] }
web-sys = { version = "*", features = ["Crypto", "console"], default-features = true }
scraper = { version = "*" }
chrono = { version = "*", features = ["default", "serde"] }
html5ever = { version = "*" }
kdam = { version = "*" }
filetime = { version = "*" }