[package]
name = "ameba_blog_downloader"
version = "1.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "*", features = ["full"] }
reqwest = { version = "*", features = ["default", "json"] }
regex = { version = "*", features = ["default"] }
futures = { version = "*", features = ["default"] }
serde_json = { version = "*", features = ["default", "preserve_order"] }
serde = { version = "*", features = ["default", "derive"] }
ort = { version = "=2.0.0-rc.0", features = ["tensorrt", "cuda", "load-dynamic", "half"] }
#tract-onnx = { version = "*" }
image = { version = "*", features = ["jpeg", "png"] }
#tracing-subscriber = { version = "*", features = ["fmt", "env-filter"] }
#rand = { version = "*", features = ["default"] }
ndarray = { version = "*", features = ["default", "serde", "serde-1"] }
imageproc = { version = "*", features = ["default"] }
#include-bytes-zstd = { version = "0.1.0" }
#wasm-bindgen = { version = "*" }
#wasm-bindgen-futures = { version = "*" }
#wasm-pack = { version = "*" }
console-subscriber = { version = "*" }
#openssl-sys = { version = "0.9.93", features = ["vendored"] }
#web-sys = { version = "*", features = ["Crypto", "console"], default-features = true }
#scraper = { version = "*" }
chrono = { version = "*", features = ["default", "serde"] }
html5ever = { version = "0.27.0" }
markup5ever_rcdom = { version = "*" }
kdam = { version = "*" }
filetime = { version = "*" }
#ndarray-linalg = { version = "*", features = ["default"] }
#tract-onnx = { version = "*" }
ndarray-npy = { version = "0.8.1" }
itertools = { version = "*" }
powerboxesrs = { version = "*" }
once_cell = { version = "*" }
anyhow = { version = "*" }
sqlx = { version = "*", features = ["runtime-tokio-native-tls", "default", "sqlite", "chrono"] }
dotenv = { version = "*" }
lazy-regex = { version = "*" }
ego-tree = { version = "*" }
#tqdm = { version = "*" }
#gstreamer = { version = "*" }
zune-image = { version = "*", features = ["all"] }
rand = { version = "*" }
wgpu = { version = "*" }
#pprof = { version = "*", features = ["default", "protobuf", "flamegraph"] }
crc32fast = { version = "*   " }
zerocopy = { version = "0.8.0-alpha.14" }
gcp_access_token = { version = "*" }
directories = { version = "*" }
parking_lot = { version = "*" }
rayon = { version = "*" }

[profile.relwithdebinfo]
inherits = "release"
debug = "full"

[profile.dev.package.zune-image]
opt-level = 3
[env]
#OPENSSL_DIR = "C:\\Users\\tomokazu\\build\\vcpkg\\packages\\openssl_x64-windows"
#[env]
#ORT_LIB_LOCATION = "C:\\Users\\tomokazu\\Downloads\\Microsoft.ML.OnnxRuntime.DirectML.1.17.3(1)\\runtimes\\win-x64\\native"
